--- a/Econometrie/projet/rendu.qmd
+++ b/Econometrie/projet/rendu.qmd
@@ -245,26 +245,28 @@ ggplot(data, aes(y = Happiness)) +
 Figure 2 : Boxplot du score de bonheur
 :::
 
-A première vue, l'histogramme nous indique que l'indice du bonheur semble difficilement suivre une loi normale. On repère cela à une certaine symétrie et une concentration d'indivus autour du centre, particulièrement deux pics : l'un proche de 4,5 et le second de 6.
+A première vue, la fig.1 semble difficilement suivre une loi normale. On repère cela à une certaine symétrie et une concentration d'indivus autour du centre, particulièrement deux pics : l'un proche de 4,5 et le second de 6.
 
-Le boxplot du bonheur présente une répartition très équilibrée de notre variable explicative. On n'y repère pas de tendances particulières si ce n'est que les deux quarts les moins heureux sont légèrement plus grands.
+La fig.2 présente une répartition très équilibrée de notre variable explicative. On n'y repère pas de tendances particulières si ce n'est que les deux quarts les moins heureux sont légèrement plus grands.
 
 ### Analyse de chaque variable explicative
 
 ```{r echo=FALSE, fig.height=12, fig.width=12}
 plots <- list()
 
+nomsdevar = c("Corruption politique", "PIB par habitant", "Espérance de vie", "Migration nette", "Surpoids", "Densité de population", "Consommation énergétique", "Dépenses militaires", "Croissance de population", "Inscriptions à l'école primaire")
+
+
 for (i in 1:ncol(data_numeric)) {
     p <- ggplot(data_numeric, aes_string(x = data_numeric[[i]])) +
         geom_histogram(binwidth = diff(range(data_numeric[[i]])) / 30, fill = "salmon1", color = "black", alpha = 0.7) +
-        labs(x = colnames(data_numeric)[i], y = "") +
+        labs(x = nomsdevar[i], y = "") +
         theme_minimal() +
         theme(plot.margin = grid::unit(c(0.5, 0.5, 0.5, 0.5), "cm"))
     plots[[i]] <- p
 }
 plots <- plots[-11]
-# nombre de colonnes voulu
-ncol_plot <- 2
+
 ```
 
 ::: {#fig3 .fig}
@@ -292,7 +294,7 @@ La consommation d'énergie, la densité de population et le PIB par habitant sem
 do.call(grid.arrange, c(plots[c(1, 3, 5)], ncol = 2))
 ```
 
-Figure 5 : Histogrammes sélectionnés (Political corruption, Lifespan at birth, Overweight)
+Figure 5 : Histogrammes sélectionnés (Political corruption, Lifespan at birth, Overweight adults)
 :::
 
 La corruption politique, le surpoids et l'espérance de vie ne semblent pas suivre des lois classiques.
@@ -311,108 +313,127 @@ On remarque immédiatement les individus les plus aberrants qui referont surface
 
 ## Analyse descriptive bivariée des données
 
-::: {#fig6 .fig}
-```{r echo=FALSE, fig.height=4, fig.width=6}
+```{r echo=FALSE}
 # Corrélations simples et affichage graphique (base R)
 vars <- names(data_numeric)[-ncol(data_numeric)]
 cors <- sapply(vars, function(v) cor(data_numeric$Happiness, data_numeric[[v]]))
 # trier par valeur (pour barplot horizontal)
+names(cors) = nomsdevar
 cors_sorted <- sort(cors)
+```
+
+::: {#fig6 .fig}
+```{r echo=FALSE, fig.height=5, fig.width=6}
+
 par(mar = c(5, 8, 4, 2))
 barplot(cors_sorted,
     horiz = TRUE, las = 1,
     # bicolor
     col = ifelse(cors_sorted > 0, "lightblue", "salmon1"),
-    xlab = "Corrélation avec happiness_moyenne",
-    main = "Corrélations des variables explicatives"
+    main = "Corrélations avec l'indice de bonheur",
 )
 abline(v = 0, lty = 2, col = "grey40")
 par(mar = c(5, 4, 4, 2) + 0.1)
+
+
 ```
 
 Figure 6 : Corrélations des variables explicatives avec l'indice de bonheur
 :::
 
 On remarque ici les variables les plus et les moins corrélées à l'indice du bonheur. L'espérance de vie, le PIB/hab, le surpoids et la consommation énergétique sont très corrélées positivement avec l'indice de bonheur tandis que la corruption politique et la croissance de population semblent elles être corrélées négativement.\
-Les autres variables ne semblent pas être corrélées fortement à l'indice de bonheur.
+Les autres variables sont peu ou très peu corrélées à l'indice de bonheur.
 
-::: {#fig7 .fig}
-```{r echo=FALSE, fig.height=12, fig.width=12}
-# Tracé des graphes de points et de la linéarité
+On va voir par la suite que ces correlations se traduisent en relations linéaires avec des droites décroissantes pour les variables corrélées négativement et inversement. On verra aussi que les variables avec les plus petites corrélations ont les coefficients directeurs les plus faibles et inversement.
+
+```{r echo=FAlSE}
 scatter_plots <- list()
+
 
 for (i in 2:11) {
     p <- ggplot(data, aes_string(x = data[[i]], y = "Happiness")) +
         geom_point() +
         geom_smooth(method = lm, color = "salmon1", fill = "lightblue", se = TRUE) +
-        labs(x = colnames(data)[i], y = "Happiness") +
+        labs(x = nomsdevar[i-1], y = "Happiness") +
         theme_minimal()
     scatter_plots[[i - 1]] <- p
 }
 
-# nombre de colonnes voulu
-ncol_plot <- 3
-do.call(grid.arrange, c(scatter_plots, ncol = ncol_plot))
-
 ```
 
-Figure 7 : Nuages de points entre chaque variable explicative et l'indice de bonheur
+::: {#fig7 .fig}
+```{r echo=FALSE, fig.height=6, fig.width=8}
+# Tracé des graphes de points et de la linéarité
+
+
+do.call(grid.arrange, c(scatter_plots[c(3)], ncol = 1))
+```
+
+Figure 7 : Nuage de points entre l'espérance de vie et l'indice de bonheur
 :::
 
-A nouveau, on retrouve les individus aberrants repérés plus tôt qui déforment complètement les graphiques sur l'inscription à l'école primaire, la densité de population et la migration nette. Il serait bon de voir la répartition de ces graphes sans ces individus.
-
-Dans le graphe du surpoids par l'indice de bonheur, on repère comme dans l'histogramme du surpoids deux pics de surreprésentation.
-
-La entre l'indice de bonheur et le PIB/hab semble logarithmique avec une concentation forte des individus vers les valeurs les plus faibles. De même pour le graphe de la consommation énergétique.
-
-On doute de la linéarité entre l'indice de bonheur et la corruption politique car le nuage de point est très dispersé. De même pour la croissance de la population.
-
-Finalement, on remarque une certaine linéarité positive entre l'indice de bonheur et l'espérance de vie à la naissance, les points semblent bien décrire une droite.
+Premièrement, on remarque une bonne linéarité positive entre l'indice de bonheur et l'espérance de vie à la naissance, les points semblent bien décrire une droite. C'est notre variable la plus corrélée à l'indice de bonheur et la mieux représentée linéairement.
 
 ```{r echo=FALSE}
+do.call(grid.arrange, c(scatter_plots[c(1,5,9,8)], ncol = 2))
+```
+
+Figure 8 : Nuages de points assez dispersés
+
+Ensuite, nous avons trois variables qui ont une relation linéaire avec l'indice de bonheur mais dont les nuages de points sont très dispersés : la corruption politique, la croissance de population et le surpoids.
+
+On remarque dans le nuage de point de la corruption politique un ensemble d'individus très proches, des pays heureux et peu corrompus qui ensemble ont un effet important sur la droite de linéarité et qui lui donne son aspect décroissant.
+
+On remarque également les deux concentration d'individus dans le graphe du surpoids, comme on pouvait l'apercevoir dans l'histogramme du surpoids (fig. 5).
+
+Notre quatrième graphe représente les dépenses militaires : la variable la moins corrélée à l'indice de bonheur (fig. 6). Sans surprise, on ne voit pas de linéarité avec l'indice de bonheur, la droite est horizontale et le nuage de point est très dispersé bien qu'on aperçoive les quelques individus dont le budget alloué aux dépenses militaires est plus élevé.
+
+```{r echo=FALSE}
+
 data_ss_singapour <- data[-which(data$Code == "SGP"), ]
 sspopplot <- ggplot(data_ss_singapour, aes_string(x = "Population_Density", y = "Happiness")) +
-    geom_point() +
+    geom_point(color = "blue") +
     geom_smooth(method = lm, color = "salmon1", fill = "lightblue", se = TRUE) +
-    labs(x = "Densité de population sans Singapour", y = "Happiness") +
+    labs(x = "Sans Singapour", y = "Happiness") +
     theme_minimal()
 
 
 data_ss_somalie <- data[-which(data$Code == "SOM"), ]
 ssschoolplot <- ggplot(data_ss_somalie, aes_string(x = "Primary_School_Enrollment", y = "Happiness")) +
-    geom_point() +
+    geom_point(color = "blue") +
     geom_smooth(method = lm, color = "salmon1", fill = "lightblue", se = TRUE) +
-    labs(x = "Inscriptions à l'école primaire sans la Somalie", y = "Happiness") +
+    labs(x = "Sans la Somalie", y = "Happiness") +
     theme_minimal()
 
 data_ss_pak_usa <- data[-which(data$Code == "PAK" | data$Code == "USA"), ]
 ssmigrationplot <- ggplot(data_ss_pak_usa, aes_string(x = "Net_Migration", y = "Happiness")) +
-    geom_point() +
+    geom_point(color = "blue") +
     geom_smooth(method = lm, color = "salmon1", fill = "lightblue", se = TRUE) +
-    labs(x = "Migration sans les EU ni le Pakistan", y = "Happiness") +
+    labs(x = "Sans les EU ni le Pakistan", y = "Happiness") +
     theme_minimal()
 
-
-outlierplots <- list(sspopplot, ssschoolplot, ssmigrationplot)
-
+outlierplots <- list(ssmigrationplot, sspopplot, ssschoolplot)
 
 ```
 
-::: {#fig8 .fig}
-```{r echo=FALSE}
-do.call(grid.arrange, c(outlierplots, ncol = 2))
+```{r echo=FALSE, fig.height=6, fig.width=8}
+
+do.call(grid.arrange, c(c(scatter_plots[c(4,6,10)],outlierplots), ncol = 3))
 ```
 
-Figure 8 : Graphiques sans outliers identifiés (Population density, Primary school enrollment, Migration)
-:::
+Figure 9 : Nuage de points les plus concentrés
 
-Ici, retirer les individus les plus aberrants ne permet pas pour autant d'obtenir une linéarité de la relation entre l'indice de bonheur et les variables étudiées. Au contraire : tout comme les dépenses militaires, ces variables ne semblent pas corrélées à notre score de bonheur.
+Voyons maintenant les variables qui dont les individus sont très concentrés, mettant en évidence certains individus aberrants repérés plus tôt (figure 3 et 4) : les EU et le Pakistan pour la migration, Singapour pour la densité de population et la Somalie pour le taux d'inscription à l'école primaire.
+
+Cela dit, ces individus ne sont pas mal projetés vis-à-vis des droites de relation linéaire avec l'indice de bonheur. Ils ne semblent pas avoir d'effet particulièrement grand sur leurs droites respectives.
+
+Afin d'observer les nuages de points concentrés de plus près, nous avons retiré les individus aberrants susnommés. Comme on peut le voir, cela ne permet pas d'obtenir une linéarité claire de la relation entre l'indice de bonheur et les variables étudiées. Tout comme les dépenses militaires, ces variables ne semblent pas ou peu corrélées à notre score de bonheur et leur forte concentration d'individus complique toute étude visuelle du lien avec le bonheur.
 
 ```{r echo=FALSE}
 data_PIB_log <- data
 data_PIB_log$GDP_per_Capita <- log(data_PIB_log$GDP_per_Capita)
 PIBplot <- ggplot(data_PIB_log, aes_string(x = "GDP_per_Capita", y = "Happiness")) +
-    geom_point() +
+    geom_point(color = "blue") +
     geom_smooth(method = lm, color = "salmon1", fill = "lightblue", se = TRUE) +
     labs(x = "Logarithme du PIB par habitant", y = "Happiness") +
     theme_minimal()
@@ -421,7 +442,7 @@ PIBplot <- ggplot(data_PIB_log, aes_string(x = "GDP_per_Capita", y = "Happiness"
 data_KWH_log <- data
 data_KWH_log$KWH_pp_pc <- log(data_KWH_log$KWH_pp_pc)
 KWHplot <- ggplot(data_KWH_log, aes_string(x = "KWH_pp_pc", y = "Happiness")) +
-    geom_point() +
+    geom_point(color = "blue") +
     geom_smooth(method = lm, color = "salmon1", fill = "lightblue", se = TRUE) +
     labs(x = "Logarithme de la consommmation énergétique", y = "Happiness") +
     theme_minimal()
@@ -436,34 +457,32 @@ migrationplot <- ggplot(data_migration, aes_string(x = "Net_Migration", y = "Hap
     theme_minimal()
 
 logplots <- list(PIBplot, KWHplot, migrationplot)
-
-
 ```
 
 ::: {#fig9 .fig}
-```{r echo=FALSE}
-do.call(grid.arrange, c(logplots, ncol = 2))
+```{r echo=FALSE, fig.height=6, fig.width=8}
+
+do.call(grid.arrange, c(scatter_plots[c(2,7)],logplots[c(1,2)], ncol = 2))
 ```
 
-Figure 9 : Transformations logarithmiques et leurs relations avec Happiness
+Figure 10 : Nuages de points avec l'indice de bonheur des variables bénéficiant d'une transformation logarithmique et lesdites transformations
 :::
 
-Appliquer un logarithme au PIB par habitant et à la consommation énergétique permet un lien linéaire très clair avec l'indice de bonheur. La relation est moins forte mais c'est aussi le cas avec la migration nette, sans même retirer les individus aberrants qui sont bien projetés sur la droite. Mais attention : appliquer une transformation logarithmique à la Migration nous fait perdre tous les individus pour lesquels celle-ci est négative, ce qui est un trop gros biais.
+Enfin, nous nous intéressons à des transformations de variables dont les graphes initiaux ne donnait pas une belle linéarité avec l'indice de bonheur. Le PIB/hab et la consommation énergétique ont une forte concentration des individus autour des valeurs faibles et quelques individus aux valeurs élevées décrivant originellement une relation plus logarithmique que linéaire.
 
-Aucune modification classique (exp, log, carré) ne donne une meilleure linéarité aux autres variables (j'ai tout testé).
+Appliquer un logarithme au PIB par habitant et à la consommation énergétique permet un lien linéaire très clair avec l'indice de bonheur. Cette réalisation nous indique que nous obtiendrons de meilleurs modèles en utilisant ces transformations logarithmiques plutôt que les variables originelles..
 
-```{r echo=FALSE, fig.height=12, fig.width=12}
-# Tracé des graphes de points et de la linéarité
+```{r echo=FALSE}
 box_plots <- list()
 j <- 1
 
 for (i in c(2, 3, 5, 7, 9, 11)) {
     p <- ggplot(data, aes_string(y = data[[i]])) +
         geom_boxplot(
-            notch = FALSE, outlier.colour = "salmon1", outlier.shape = 8,
+            fill = 'lightblue', notch = FALSE, outlier.colour = "salmon1", outlier.shape = 8,
             outlier.size = 4
         ) +
-        labs(x = colnames(data)[i]) +
+        labs(x = nomsdevar[i-1]) +
         theme_minimal()
     box_plots[[j]] <- p
     j <- j + 1
@@ -474,14 +493,16 @@ ncol_plot <- 3
 ```
 
 ::: {#fig10 .fig}
-```{r echo=FALSE}
+```{r echo=FALSE, fig.height=6, fig.width=6}
 do.call(grid.arrange, c(box_plots, ncol = ncol_plot))
 ```
 
-Figure 10 : Boxplots des variables explilcatives
+Figure 10 : Boxplots des variables explicatives
 :::
 
 Un affichage en boîtes à moustache permet de repérer très facilement les **outliers**, ces individus qui étirent fortement la distribution. En effet, sur la figure 10, on peut comparer une distribution classique, celle de la corruption politique, avec des distribution perturbée par des individus extrêmes (PIB, Migration, Densité de population, dépenses militaires ou Taux de scolarisation par exemple).
+
+A nouveau, on remarque une importante concentration des individus pour ce qui est de la migration, la densité de population et les inscriptions à l'école primaire. On visualise bien la concentration des pays les plus pauvres dans la moitié basse de boxplot du PIB par habitant qui nous a poussé à tester une transformation logarithmique.
 
 ::: {#fig11 .fig}
 ```{r echo=FALSE}
@@ -494,7 +515,7 @@ ggplot(data, aes(x = OCDE, y = Happiness)) +
 Figure 11 : Boxplot du bonheur en fonction de l'appartenance à l'OCDE
 :::
 
-Il est clair que les pays membres de l'OCDE ont un bonheur bien plus élevé que les non-membres.
+Il est clair que les pays membres de l'OCDE ont un bonheur bien plus élevé que les non-membres. On s'attend donc à observer une certaine significativité de l'OCDE dans notre modèle.
 
 # **Analyse et discussion des résultats**
 
